<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP50_MAIN" Id="{c61d3117-5541-47a3-adbe-b3a8386e84cf}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP50_MAIN
VAR
	OP50_Modeselection_FB: Mode_Selection_Block1;
	TP_100ms: TP;
	Pulse_1s: BOOL;
	Times: LREAL;
	Pge_NUM : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[OP50_Manual();
OP50_AUTOSEQUENCE();
OP50_CONVEYOR();
OP50_Error();
OP50_Initialize_Seq();

//MOdeselection From HMI

IF (OP50_GVL.OP50_HMI_AutoMode AND NOT OP50_GVL.OP50_HMI_ManualMOde AND NOT OP50_GVL.OP50_HMI_StepMode) THEN
	OP50_Modeselection_FB.ModeWord:=1;
	ELSIF (NOT OP50_GVL.OP50_HMI_AutoMode AND OP50_GVL.OP50_HMI_ManualMOde AND NOT OP50_GVL.OP50_HMI_StepMode) THEN
		OP50_Modeselection_FB.ModeWord:=2;
	ELSIF  (NOT OP50_GVL.OP50_HMI_AutoMode AND NOT OP50_GVL.OP50_HMI_ManualMOde AND  OP50_GVL.OP50_HMI_StepMode) THEN
		OP50_Modeselection_FB.ModeWord:=3;
    ELSE   
		OP50_Modeselection_FB.ModeWord:=0;
END_IF

(*
IF  (OP50_AutoSelected OR OP50_ManualSelected ) AND NOT OP50_ErrorActive AND OP50_Safety_OK THEN
  SR50_CONV_servo.bEnable:=TRUE;
  SR50_HORI_servo.bEnable:=TRUE;
  SR50_VERT_servo.bEnable:=TRUE;
ELSE 
  SR50_CONV_servo.bEnable:=FALSE;
  SR50_HORI_servo.bEnable:=FALSE;
  SR50_VERT_servo.bEnable:=FALSE;	
END_IF
*)
IF SR50_CONV_servo.bAxisError THEN//OR SR50_HORI_servo.bAxisError OR SR50_VERT_servo.bAxisError THEN
	OP50_ErrorActive:=TRUE;
END_IF
	
OP50_Modeselection_FB(
	ModeWord:= , 
	HomeConditionOK:=OP50_HomeConditionOK , 
	OperationEnable:=OP50_AutoSelected AND OP50_Safety_OK , 
	StartPB:=OP50_HMI_Cycle_Start , 
	SafetyAndNOError:= OP50_Safety_OK, 
	ModeAck:=TRUE , 
	HomingINProgress:=OP50_HomeRunning , 
	TempHomeOK:=OP50_Temp_hmeOK , 
	ResetPB:= , 
	AutoSelected=> OP50_AutoSelected, 
	ManualSelected=> OP50_ManualSelected, 
	StepSelected=>OP50_StepSelected , 
	ModeSelAck_Indication=> , 
	StatusDisplay=> , 
	AutoRunning:=OP50_AutoRunning, 
	StepRunning:=OP50_StepRunning , 
	StartEnable:=OP50_StartEnable  , 
	MachineStop:=OP50_Machine_Stop );
	
TP_100ms(IN:=NOT TP_100ms.Q , PT:=T#1S , Q=>Pulse_1s, ET=> );	]]></ST>
    </Implementation>
    <LineIds Name="OP50_MAIN">
      <LineId Id="3" Count="52" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>